--- a/docker-compose/withPostgresAndWorker/docker-compose.yml
+++ b/docker-compose/withPostgresAndWorker/docker-compose.yml
@@ -62,6 +62,12 @@ services:
 
   n8n:
     <<: *shared
+    labels:
+    - traefik.enable=true
+    - 'traefik.http.routers.n8n.rule=Host("n8n.biocentra.eu")'
+    - traefik.http.routers.n8n.tls.certresolver=letsencrypt
+    - traefik.http.services.n8n.loadbalancer.server.port=3000
+    - traefik.http.routers.n8n.entrypoints=https
     ports:
       - 5678:5678
 
