--- a/docker-compose/withPostgresAndWorker/docker-compose.yml
+++ b/docker-compose/withPostgresAndWorker/docker-compose.yml
@@ -68,6 +68,8 @@ services:
     - traefik.http.routers.n8n.tls.certresolver=letsencrypt
     - traefik.http.services.n8n.loadbalancer.server.port=3000
     - traefik.http.routers.n8n.entrypoints=https
+    networks:
+      - networkName: coolify-net
     ports:
       - 5678:5678
 
