--- a/docker-compose/withPostgres/docker-compose.yml
+++ b/docker-compose/withPostgres/docker-compose.yml
@@ -6,33 +6,60 @@ volumes:
 
 services:
   postgres:
-    image: postgres:16
-    restart: always
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_NON_ROOT_USER=${POSTGRES_NON_ROOT_USER}
-      - POSTGRES_NON_ROOT_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
-    volumes:
-      - db_storage:/var/lib/postgresql/data
-      - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
-      interval: 5s
-      timeout: 5s
-      retries: 10
+      image: postgres:16
+      restart: always
+      networks:
+        - coolify-net
+      environment:
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_DB=${POSTGRES_DB}
+        - POSTGRES_NON_ROOT_USER=${POSTGRES_NON_ROOT_USER}
+        - POSTGRES_NON_ROOT_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
+      volumes:
+        - db_storage:/var/lib/postgresql/data
+        - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
+      healthcheck:
+        test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
+        interval: 5s
+        timeout: 5s
+        retries: 10
 
   n8n:
     image: docker.n8n.io/n8nio/n8n
     restart: always
+    networks:
+      - coolify-net
     environment:
+      - N8N_PORT=3000
+      - N8N_ENV=production
+      - N8N_PROTOCOL=https
+      - N8N_HOST=n8n.biocentra.eu
+      - 'N8N_EDITOR_BASE_URL=https://n8n.biocentra.eu'
+      - 'WEBHOOK_URL=https://n8n.biocentra.eu'
+
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=postgres
       - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
       - DB_POSTGRESDB_USER=${POSTGRES_NON_ROOT_USER}
       - DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
+      - DB_POSTGRESDB_SCHEMA=public
+      - PG_DATABASE_URL=postgres://${DB_POSTGRESDB_USER}:${DB_POSTGRESDB_PASSWORD}@postgresql:${DB_POSTGRESDB_PORT}/${POSTGRES_DB}
+
+
+      - GENERIC_TIMEZONE=Europe/Berlin
+      - TZ=Europe/Berlin
+      - NODE_ENV=production
+    labels:
+      - traefik.enable=true
+      - 'traefik.http.routers.n8n.rule=Host("n8n.biocentra.eu")'
+      - traefik.http.routers.n8n.entrypoints=https
+      - traefik.http.routers.n8n.tls.certresolver=letsencrypt
+      - traefik.http.services.n8n.loadbalancer.server.port=3000
+      - traefik.http.middlewares.gzip.compress=true
+      - traefik.http.routers.n8n.middlewares=gzip
+
+
     ports:
       - 5678:5678
     links:
@@ -42,3 +69,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+
+networks:
+  coolify-net:
+    external: true
