Refactor docker-compose.yml to improve service configuration and ensure consistent network usage across services

--- a/docker-compose/withPostgresAndWorker/docker-compose.yml
+++ b/docker-compose/withPostgresAndWorker/docker-compose.yml
@@ -7,21 +7,38 @@ volumes:
 
 x-shared: &shared
   restart: always
+  networks:
+    - coolify-net
   image: docker.n8n.io/n8nio/n8n
   environment:
     - DB_TYPE=postgresdb
     - DB_POSTGRESDB_HOST=postgres
     - DB_POSTGRESDB_PORT=5432
-    - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
-    - DB_POSTGRESDB_USER=${POSTGRES_NON_ROOT_USER}
-    - DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
+    - DB_POSTGRESDB_SCHEMA=public
+    
     - EXECUTIONS_MODE=queue
     - QUEUE_BULL_REDIS_HOST=redis
     - QUEUE_HEALTH_CHECK_ACTIVE=true
+    
+    - N8N_PORT=3000
+    - N8N_ENV=production
+    - N8N_PROTOCOL=https
+    - N8N_HOST=n8n.biocentra.eu
+    - 'N8N_EDITOR_BASE_URL=https://n8n.biocentra.eu'
+    - 'WEBHOOK_URL=https://n8n.biocentra.eu'
+
+    - GENERIC_TIMEZONE=Europe/Berlin
+    - TZ=Europe/Berlin
+    - NODE_ENV=production
+
+    - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
+    - DB_POSTGRESDB_USER=${POSTGRES_NON_ROOT_USER}
+    - DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
+    # - PG_DATABASE_URL=postgres://${DB_POSTGRESDB_USER}:${DB_POSTGRESDB_PASSWORD}@postgres:${DB_POSTGRESDB_PORT}/${POSTGRES_DB}
     - N8N_ENCRYPTION_KEY=${ENCRYPTION_KEY}
-  links:
-    - postgres
-    - redis
+  # links:
+  #   - postgres
+  #   - redis
   volumes:
     - n8n_storage:/home/node/.n8n
   depends_on:
@@ -33,6 +50,8 @@ x-shared: &shared
 services:
   postgres:
     image: postgres:16
+    networks:
+      - coolify-net
     restart: always
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
@@ -51,6 +70,8 @@ services:
 
   redis:
     image: redis:6-alpine
+    networks:
+      - coolify-net
     restart: always
     volumes:
       - redis_storage:/data
@@ -69,15 +90,39 @@ services:
     - traefik.http.services.n8n.loadbalancer.server.port=3000
     - traefik.http.routers.n8n.entrypoints=https
     networks:
-      - networkName: coolify-net
-    ports:
-      - 5678:5678
+      - coolify-net
+
 
   n8n-worker:
-    <<: *shared
+    image: docker.n8n.io/n8nio/n8n
     command: worker
+    restart: always
+    networks:
+      - coolify-net
+    environment:
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
+      - DB_POSTGRESDB_USER=${POSTGRES_NON_ROOT_USER}
+      - DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
+      - DB_POSTGRESDB_SCHEMA=public
+
+      - EXECUTIONS_MODE=queue
+      - QUEUE_BULL_REDIS_HOST=redis
+      - QUEUE_HEALTH_CHECK_ACTIVE=true
+
+      - GENERIC_TIMEZONE=Europe/Berlin
+      - TZ=Europe/Berlin
+      - NODE_ENV=production
+
+      - N8N_ENCRYPTION_KEY=${ENCRYPTION_KEY}
     depends_on:
-      - n8n
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+
 networks:
   coolify-net:
     external: true
