--- a/docker-compose/withPostgresAndWorker/docker-compose.yml
+++ b/docker-compose/withPostgresAndWorker/docker-compose.yml
@@ -25,6 +25,7 @@ x-shared: &shared
     - N8N_PROTOCOL=https
     - N8N_HOST=n8n.biocentra.eu
     - 'N8N_EDITOR_BASE_URL=https://n8n.biocentra.eu'
+    - N8N_RUNNERS_ENABLED=true
     - 'WEBHOOK_URL=https://n8n.biocentra.eu'
 
     - GENERIC_TIMEZONE=Europe/Berlin
@@ -61,7 +62,7 @@ services:
       - POSTGRES_NON_ROOT_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
     volumes:
       - db_storage:/var/lib/postgresql/data
-      - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
+      - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh:ro
 
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
